[Enhancement #231] Incorporate lazy loading proxies into clone building (WIP).