@@ -22,6 +22,7 @@ import cz.cvut.kbss.jopa.model.descriptors.EntityDescriptor;
 import cz.cvut.kbss.jopa.model.lifecycle.PostLoadInvoker;
 import cz.cvut.kbss.jopa.model.metamodel.EntityType;
 import cz.cvut.kbss.jopa.model.metamodel.IdentifiableEntityType;
+import cz.cvut.kbss.jopa.sessions.CloneRegistrationDescriptor;
 import cz.cvut.kbss.jopa.sessions.UnitOfWork;
 import cz.cvut.kbss.jopa.utils.ReflectionUtils;
 import cz.cvut.kbss.ontodriver.iteration.ResultRow;
@@ -60,8 +61,8 @@ class EntityResultMapper<T> implements SparqlResultMapper {
         try {
             final T instance = ReflectionUtils.instantiateUsingDefaultConstructor(et.getJavaType());
             fieldMappers.forEach(m -> m.map(resultRow, instance, uow));
-            return et.getJavaType().cast(uow.registerExistingObject(instance, new EntityDescriptor(),
-                    Collections.singletonList(new PostLoadInvoker(uow.getMetamodel()))));
+            return et.getJavaType()
+                     .cast(uow.registerExistingObject(instance, new CloneRegistrationDescriptor(new EntityDescriptor()).postCloneHandlers(List.of(new PostLoadInvoker(uow.getMetamodel())))));
         } catch (cz.cvut.kbss.jopa.exception.InstantiationException e) {
             // This is not expected, since an entity class must have a public no-arg constructor
             throw new SparqlResultMappingException(e);
