@@ -20,6 +20,7 @@ package cz.cvut.kbss.jopa.oom;
 import cz.cvut.kbss.jopa.environment.OWLClassA;
 import cz.cvut.kbss.jopa.environment.OWLClassB;
 import cz.cvut.kbss.jopa.environment.OWLClassD;
+import cz.cvut.kbss.jopa.environment.OWLClassF;
 import cz.cvut.kbss.jopa.environment.OWLClassJ;
 import cz.cvut.kbss.jopa.environment.OWLClassL;
 import cz.cvut.kbss.jopa.environment.OWLClassM;
@@ -38,6 +39,8 @@ import cz.cvut.kbss.jopa.model.annotations.OWLObjectProperty;
 import cz.cvut.kbss.jopa.model.annotations.ParticipationConstraints;
 import cz.cvut.kbss.jopa.model.descriptors.Descriptor;
 import cz.cvut.kbss.jopa.model.descriptors.EntityDescriptor;
+import cz.cvut.kbss.jopa.proxy.lazy.LazyLoadingProxy;
+import cz.cvut.kbss.jopa.proxy.lazy.LazyLoadingProxyFactory;
 import cz.cvut.kbss.jopa.query.sparql.SparqlQueryFactory;
 import cz.cvut.kbss.jopa.sessions.UnitOfWork;
 import cz.cvut.kbss.jopa.utils.Configuration;
@@ -67,9 +70,9 @@ import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertInstanceOf;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertSame;
@@ -136,21 +139,21 @@ class EntityConstructorTest {
 
     static Axiom<URI> getClassAssertionAxiomForType(URI uri, String type) {
         return new AxiomImpl<>(NamedResource.create(uri), Assertion.createClassAssertion(false),
-                               new Value<>(URI.create(type)));
+                new Value<>(URI.create(type)));
     }
 
     static Axiom<String> getStringAttAssertionAxiom(URI individual, String value, Field attField) {
         final String assertionIri = attField.getAnnotation(OWLDataProperty.class).iri();
         return new AxiomImpl<>(NamedResource.create(individual),
-                               Assertion.createDataPropertyAssertion(URI.create(assertionIri), false),
-                               new Value<>(value));
+                Assertion.createDataPropertyAssertion(URI.create(assertionIri), false),
+                new Value<>(value));
     }
 
     private Set<Axiom<?>> getTypesAxiomsForOwlClassA() {
         final Set<Axiom<?>> axs = new HashSet<>();
         for (String type : TYPES) {
             final Axiom<URI> ax = new AxiomImpl<>(NamedResource.create(ID), Assertion.createClassAssertion(false),
-                                                  new Value<>(URI.create(type)));
+                    new Value<>(URI.create(type)));
             axs.add(ax);
         }
         return axs;
@@ -196,7 +199,7 @@ class EntityConstructorTest {
 
         final Axiom<String> axOne = new AxiomImpl<>(ID_RESOURCE, Assertion
                 .createDataPropertyAssertion(URI.create("http://someDataPropertyOne"),
-                                             false), new Value<>("SomePropertyValue"));
+                        false), new Value<>("SomePropertyValue"));
         props.add(axOne);
 
         final Axiom<String> axTwo = new AxiomImpl<>(ID_RESOURCE, Assertion.createAnnotationPropertyAssertion(
@@ -205,7 +208,7 @@ class EntityConstructorTest {
 
         final Axiom<URI> axThree = new AxiomImpl<>(ID_RESOURCE, Assertion
                 .createObjectPropertyAssertion(URI.create("http://someObjectPropertyOne"),
-                                               false), new Value<>(URI.create("http://someObjectPropertyOne")));
+                        false), new Value<>(URI.create("http://someObjectPropertyOne")));
         props.add(axThree);
         return props;
     }
@@ -252,7 +255,7 @@ class EntityConstructorTest {
 
     private Axiom<NamedResource> createObjectPropertyAxiomForD() throws NoSuchFieldException {
         return new AxiomImpl<>(NamedResource.create(ID), getClassDObjectPropertyAssertion(),
-                               new Value<>(NamedResource.create(ID_TWO)));
+                new Value<>(NamedResource.create(ID_TWO)));
     }
 
     private Assertion getClassDObjectPropertyAssertion() throws NoSuchFieldException {
@@ -289,7 +292,7 @@ class EntityConstructorTest {
         axioms.add(getStringAttAssertionAxiom(ID, STRING_ATT, OWLClassA.getStrAttField()));
         axioms.add(getStringAttAssertionAxiom(ID, STRING_ATT, OWLClassA.getStrAttField()));
         assertThrows(CardinalityConstraintViolatedException.class,
-                     () -> constructor.reconstructEntity(ID, mocks.forOwlClassA().entityType(), descriptor, axioms));
+                () -> constructor.reconstructEntity(ID, mocks.forOwlClassA().entityType(), descriptor, axioms));
     }
 
     private Axiom<?> createDataPropertyAxiomWithWrongRange(Field valueField) {
@@ -318,7 +321,7 @@ class EntityConstructorTest {
         entityA.setUri(ID_TWO);
         final URI pkThree = URI.create("http://krizik.felk.cvut.cz/ontologies/jopa/entity3");
         axioms.add(new AxiomImpl<>(NamedResource.create(ID), getClassDObjectPropertyAssertion(),
-                                   new Value<>(NamedResource.create(pkThree))));
+                new Value<>(NamedResource.create(pkThree))));
         final OWLClassA entityThree = new OWLClassA();
         entityThree.setUri(pkThree);
         final Descriptor fieldDescriptor = new EntityDescriptor();
@@ -327,7 +330,7 @@ class EntityConstructorTest {
         when(mapperMock.getEntityFromCacheOrOntology(OWLClassA.class, pkThree, fieldDescriptor))
                 .thenReturn(entityThree);
         assertThrows(CardinalityConstraintViolatedException.class,
-                     () -> constructor.reconstructEntity(ID, mocks.forOwlClassD().entityType(), descriptor, axioms));
+                () -> constructor.reconstructEntity(ID, mocks.forOwlClassD().entityType(), descriptor, axioms));
     }
 
     @Test
@@ -338,8 +341,8 @@ class EntityConstructorTest {
         entityA.setUri(ID);
         assertNull(entityA.getStringAttribute());
         constructor.setFieldValue(entityA, mocks.forOwlClassA().stringAttribute(), axioms,
-                                  mocks.forOwlClassA().entityType(),
-                                  descriptor);
+                mocks.forOwlClassA().entityType(),
+                descriptor);
         assertNotNull(entityA.getStringAttribute());
         assertEquals(STRING_ATT, entityA.getStringAttribute());
     }
@@ -359,8 +362,8 @@ class EntityConstructorTest {
         when(mapperMock.getEntityFromCacheOrOntology(OWLClassA.class, ID_TWO, fieldDesc))
                 .thenReturn(entityA);
         constructor.setFieldValue(entityD, mocks.forOwlClassD().owlClassAAtt(), axioms,
-                                  mocks.forOwlClassD().entityType(),
-                                  descriptor);
+                mocks.forOwlClassD().entityType(),
+                descriptor);
         assertNotNull(entityD.getOwlClassA());
         assertEquals(ID_TWO, entityD.getOwlClassA().getUri());
         verify(mapperMock).getEntityFromCacheOrOntology(OWLClassA.class, ID_TWO, fieldDesc);
@@ -375,7 +378,7 @@ class EntityConstructorTest {
         entityA.setUri(ID);
         assertNull(entityA.getTypes());
         constructor.setFieldValue(entityA, mocks.forOwlClassA().typesSpec(), axioms, mocks.forOwlClassA().entityType(),
-                                  descriptor);
+                descriptor);
         assertNotNull(entityA.getTypes());
         assertEquals(TYPES.size(), entityA.getTypes().size());
         assertTrue(entityA.getTypes().containsAll(TYPES));
@@ -389,8 +392,8 @@ class EntityConstructorTest {
         entityB.setUri(ID);
         assertNull(entityB.getProperties());
         constructor.setFieldValue(entityB, mocks.forOwlClassB().propertiesSpec(), axioms,
-                                  mocks.forOwlClassB().entityType(),
-                                  descriptor);
+                mocks.forOwlClassB().entityType(),
+                descriptor);
         assertNotNull(entityB.getProperties());
         assertEquals(props, entityB.getProperties());
     }
@@ -401,7 +404,7 @@ class EntityConstructorTest {
             final URI property = URI.create(e.getKey());
             axioms.addAll(e.getValue().stream().map(val -> new AxiomImpl<>(ID_RESOURCE, Assertion
                                    .createPropertyAssertion(property, false), new Value<>(URI.create(val))))
-                           .collect(Collectors.toList()));
+                           .toList());
         }
         return axioms;
     }
@@ -416,8 +419,8 @@ class EntityConstructorTest {
         entityJ.setUri(ID);
         assertNull(entityJ.getOwlClassA());
         constructor.setFieldValue(entityJ, mocks.forOwlClassJ().setAttribute(), axioms,
-                                  mocks.forOwlClassJ().entityType(),
-                                  descriptor);
+                mocks.forOwlClassJ().entityType(),
+                descriptor);
         assertNotNull(entityJ.getOwlClassA());
         assertEquals(set.size(), entityJ.getOwlClassA().size());
         assertTrue(areEqual(set, entityJ.getOwlClassA()));
@@ -442,9 +445,9 @@ class EntityConstructorTest {
                                                  .getAnnotation(OWLObjectProperty.class).iri());
         for (OWLClassA a : as) {
             final Axiom<NamedResource> ax = new AxiomImpl<>(NamedResource.create(ID),
-                                                            Assertion.createObjectPropertyAssertion(property, false),
-                                                            new Value<>(NamedResource.create(
-                                                                    a.getUri())));
+                    Assertion.createObjectPropertyAssertion(property, false),
+                    new Value<>(NamedResource.create(
+                            a.getUri())));
             axioms.add(ax);
         }
         return axioms;
@@ -494,12 +497,12 @@ class EntityConstructorTest {
             final String boolAttIri = OWLClassM.getBooleanAttributeField().getAnnotation(OWLDataProperty.class).iri();
             axioms.add(
                     new AxiomImpl<>(ID_RESOURCE, Assertion.createDataPropertyAssertion(URI.create(boolAttIri), false),
-                                    new Value<>(b)));
+                            new Value<>(b)));
         }
         if (i != null) {
             final String intAttIri = OWLClassM.getIntAttributeField().getAnnotation(OWLDataProperty.class).iri();
             axioms.add(new AxiomImpl<>(ID_RESOURCE, Assertion.createDataPropertyAssertion(URI.create(intAttIri), false),
-                                       new Value<>(i)));
+                    new Value<>(i)));
         }
         if (lng != null) {
             final String longAttIri = OWLClassM.getLongAttributeField().getAnnotation(OWLDataProperty.class).iri();
@@ -510,19 +513,19 @@ class EntityConstructorTest {
             final String doubleAttIri = OWLClassM.getDoubleAttributeField().getAnnotation(OWLDataProperty.class).iri();
             axioms.add(
                     new AxiomImpl<>(ID_RESOURCE, Assertion.createDataPropertyAssertion(URI.create(doubleAttIri), false),
-                                    new Value<>(d)));
+                            new Value<>(d)));
         }
         if (date != null) {
             final String dateAttIri = OWLClassM.getDateAttributeField().getAnnotation(OWLDataProperty.class).iri();
             axioms.add(
                     new AxiomImpl<>(ID_RESOURCE, Assertion.createDataPropertyAssertion(URI.create(dateAttIri), false),
-                                    new Value<>(date)));
+                            new Value<>(date)));
         }
         if (severity != null) {
             final String enumAttIri = OWLClassM.getEnumAttributeField().getAnnotation(OWLDataProperty.class).iri();
             axioms.add(
                     new AxiomImpl<>(ID_RESOURCE, Assertion.createDataPropertyAssertion(URI.create(enumAttIri), false),
-                                    new Value<>(severity.toString())));
+                            new Value<>(severity.toString())));
         }
         return axioms;
     }
@@ -547,7 +550,7 @@ class EntityConstructorTest {
         axioms.add(getClassAssertionAxiomForType(ID, OWLClassL.getClassIri()));
 
         assertThrows(IntegrityConstraintViolatedException.class,
-                     () -> constructor.reconstructEntity(ID, mocks.forOwlClassL().entityType(), descriptor, axioms));
+                () -> constructor.reconstructEntity(ID, mocks.forOwlClassL().entityType(), descriptor, axioms));
     }
 
     @Test
@@ -573,7 +576,7 @@ class EntityConstructorTest {
         final OWLClassL instance = new OWLClassL();
         assertThrows(IntegrityConstraintViolatedException.class, () -> constructor
                 .setFieldValue(instance, mocks.forOwlClassL().referencedListAtt(), fieldAxiom,
-                               mocks.forOwlClassL().entityType(), descriptor));
+                        mocks.forOwlClassL().entityType(), descriptor));
     }
 
     private Set<Axiom<?>> initInvalidFieldValuesForICValidation() throws NoSuchFieldException {
@@ -608,7 +611,7 @@ class EntityConstructorTest {
 
         final OWLClassL instance = new OWLClassL();
         constructor.setFieldValue(instance, mocks.forOwlClassL().referencedListAtt(), fieldAxiom,
-                                  mocks.forOwlClassL().entityType(), descriptor);
+                mocks.forOwlClassL().entityType(), descriptor);
     }
 
     @Test
@@ -634,10 +637,10 @@ class EntityConstructorTest {
         axioms.add(getStringAttAssertionAxiom(ID, STRING_ATT, OWLClassQ.getParentStringField()));
         final URI labelUri = URI.create(OWLClassQ.getLabelField().getAnnotation(OWLAnnotationProperty.class).iri());
         axioms.add(new AxiomImpl<>(ID_RESOURCE, Assertion.createAnnotationPropertyAssertion(labelUri, false),
-                                   new Value<>(STRING_ATT)));
+                new Value<>(STRING_ATT)));
         final URI owlClassAUri = URI.create(OWLClassQ.getOwlClassAField().getAnnotation(OWLObjectProperty.class).iri());
         axioms.add(new AxiomImpl<>(ID_RESOURCE, Assertion.createObjectPropertyAssertion(owlClassAUri, false),
-                                   new Value<>(NamedResource.create(ID_TWO))));
+                new Value<>(NamedResource.create(ID_TWO))));
         final OWLClassA a = new OWLClassA();
         a.setUri(ID_TWO);
         when(mapperMock.getEntityFromCacheOrOntology(eq(OWLClassA.class), eq(ID_TWO), any(Descriptor.class)))
@@ -672,7 +675,7 @@ class EntityConstructorTest {
         final OWLClassA entity = new OWLClassA(Generators.createIndividualIdentifier());
         assertNull(entity.getTypes());
         constructor.setFieldValue(entity, mocks.forOwlClassA().typesSpec(), Collections.emptyList(),
-                                  mocks.forOwlClassA().entityType(), descriptor);
+                mocks.forOwlClassA().entityType(), descriptor);
         assertNull(entity.getTypes());
     }
 
@@ -681,6 +684,6 @@ class EntityConstructorTest {
         final OWLClassL instance = new OWLClassL(Generators.createIndividualIdentifier());
         assertThrows(IntegrityConstraintViolatedException.class, () -> constructor
                 .setFieldValue(instance, mocks.forOwlClassL().owlClassAAtt(), Collections.emptyList(),
-                               mocks.forOwlClassL().entityType(), descriptor));
+                        mocks.forOwlClassL().entityType(), descriptor));
     }
 }
